# App-descriptivas

./: .gitignore  CLAUDE.md  CONTEXTO_PROYECTO.txt  ESTADO_ACTUAL_APP.md  PLAN_IA_GEMINI.md  README.md  app.py  arreglar_codificacion.py  main.py  pyproject.toml
.streamlit/: config.toml
IA_test/: base_sintetica_eda_informe_ia.xlsx  diccionario_tipo_odk_eda_informe_ia.xlsx  resultados_esperables_analisis_eda_informe_ia.md
src/: __init__.py  ai_report.py  crosstabs.py  data_loader.py  descriptive_stats.py  palettes.py  plots.py  theme.py  utils.py
