[project]
name = "app-descriptivas"
version = "0.1.0"
description = "Aplicacion Streamlit para estadisticas descriptivas y visualizaciones exploratorias."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kaleido>=1.2.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "statsmodels>=0.14.6",
    "streamlit>=1.57.0",
    "websockets>=16.0",
    "xlrd>=2.0.2",
    "xlsxwriter>=3.2.9",
]
